--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Tosh-Qaychi-Qog'oz</title>
     <link rel="stylesheet" href="/css/output.css">
 </head>
 <body class="flex flex-col items-center min-h-screen w-[900px] mx-auto bg-purple-950">
