--- a/index.html
+++ b/index.html
@@ -40,6 +40,10 @@
         </div>
         <img id="ai" src="./images/oval.svg" width="250px" alt="ai">
     </section>
+    <section class="w-[900px] flex mt-[250px] justify-between gap-5">
+        <button class="border pb-[20px] pt-[20px] pr-[20px] pl-[20px] w-fit font-bold text-white hover:text-black hover:bg-white cursor-pointer border-white rounded-[8px] hover:border-black" id="roles">RULES</button>
+        <button class="border pb-[20px] pt-[20px] pr-[20px] pl-[20px] w-fit font-bold text-white hover:text-black hover:bg-white cursor-pointer border-white rounded-[8px] hover:border-black" id="mode">MODE</button>
+    </section>
 
     <script src="./js/app.js" type="module"></script>
 </body>
